WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55083
SegmentedString does not need an m_composite member
https://bugs.webkit.org/show_bug.cgi?id=55083
Summary
SegmentedString does not need an m_composite member
Eric Seidel (no email)
Reported
2011-02-23 14:14:02 PST
SegmentedString does not need an m_composite member
Attachments
Patch
(10.47 KB, patch)
2011-02-23 14:15 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2011-02-23 14:15:32 PST
Created
attachment 83548
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-02-23 14:16:05 PST
I ran at least the parser perf tests and saw no change. I would not expect any perf or functional difference from this change.
WebKit Commit Bot
Comment 3
2011-02-24 08:44:48 PST
Comment on
attachment 83548
[details]
Patch Clearing flags on attachment: 83548 Committed
r79572
: <
http://trac.webkit.org/changeset/79572
>
WebKit Commit Bot
Comment 4
2011-02-24 08:44:54 PST
All reviewed patches have been landed. Closing bug.
Adam Roben (:aroben)
Comment 5
2011-02-24 08:57:18 PST
Committed
r79572
: <
http://trac.webkit.org/changeset/79572
>
Adam Roben (:aroben)
Comment 6
2011-02-24 08:57:52 PST
(In reply to
comment #5
)
> Committed
r79572
: <
http://trac.webkit.org/changeset/79572
>
Whoops, got a little trigger-happy with webkit-patch mark-bug-fixed. Please disregard.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug